--- a/htmlsrc/index.html
+++ b/htmlsrc/index.html
@@ -2,11 +2,12 @@
     <head>
         <title>LED Strip</title>
 
+
         <script src="https://unpkg.com/react@17/umd/react.production.min.js" crossorigin></script>
         <script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js" crossorigin></script>
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-        
 
+        <link rel="stylesheet" href="index.css" />
     </head>
 
     <body>
